--- a/hw/resume_css/styles.css
+++ b/hw/resume_css/styles.css
@@ -44,24 +44,27 @@ address {
   font-family: "Permanent Marker";
 }
 
-.navigation {
+#navigation {
   list-style: none;
   padding-left: 0;
   background-color: white;
   padding: 10px;
+
 }
 
-.navigation li {
+#navigation li {
   display: inline-block;
   margin-left: 60px;
+
 }
 
-.navigation a {
+#navigation a {
   font-size: 20px;
   color: orange;
+  text-decoration: none;
 }
 
-.navigation a:hover {
+#navigation a:hover {
   font-weight: normal;
   background-color: red;
   color: white
@@ -71,9 +74,10 @@ ul {
   list-style: square;
 }
 
-table {
+table {border-style: double;
+border-color: blue;
 
-  border-color: lightblue;
+
   border-collapse: collapse;
 }
 #worke {
@@ -82,3 +86,7 @@ table {
 #ski{
   text-align: right;
 }
+td,
+    th {
+      border: 3px solid red;
+    }
