--- a/hw/responsive/css/mobile.css
+++ b/hw/responsive/css/mobile.css
@@ -24,3 +24,29 @@ h2 {
   text-align: center;
 margin: 15px;
 }
+.aa{
+  font-size: 25px;
+}
+.article2{
+  border: 3px dashed;
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+}
+.a3{
+  text-align: center;
+}
+.self{
+  font-family: Amatic SC;
+  font-size: 25px;
+}
+.bbb{
+  float: right;
+  width: 180px;
+  font-size: 80%;
+  font-style:italic;
+  font-family: Satisfy;
+  margin: 20px 0px 10px 10px;
+  padding: 10px;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+}
